--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="main">
         <div class="new">
             <div class="root">
-                <div style="background-color: #fff;color: #000;border: 1px solid #000;border-radius: 9px;margin: 10px;padding: 13px;"><h1>Hello Im New App</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit tenetur, molestias soluta itaque, eos doloribus dolorum nemo nisi repellendus id aspernatur natus laboriosam quibusdam iure odio magni ratione at! Necessitatibus.</p></div>
+                <div style="background-color: #fff;color: #000;border: 1px solid #000;border-radius: 9px;margin: 10px;padding: 13px;"><h1>Hello Im New App</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit tenetur, molestias soluta itaque, eos doloribus dolorum nemo nisi repellendus id aspernatur natus laboriosam quibusdam iure odio magni ratione at! Necessitatibus.</p><a class="btn">Button A</a><button class="btn">Button B</button></div>
             </div>
         </div>
     </section>
