--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
     <nav class="nav main"><span class="title new">IC Program</span></nav>
     <section class="main">
         <div class="new">
-            <div class="root">
-                <div style="background-color: #fff;color: #000;border: 1px solid #000;border-radius: 9px;margin: 10px;padding: 13px;"><h1>Hello Im New App</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit tenetur, molestias soluta itaque, eos doloribus dolorum nemo nisi repellendus id aspernatur natus laboriosam quibusdam iure odio magni ratione at! Necessitatibus.</p><a class="btn">Button A</a><button class="btn">Button B</button></div>
-            </div>
+            <div id="app"></div>
         </div>
     </section>
     <!-- script -->
+     <section style="background-color: #dfdfdf;height: 400px;width: 100%;padding: 10px;"><div class="main"><div class="new"><h1>ICP.VERCEL.APP</h1></div></div></section>
      <script src="src/index.js"></script>
      <script src="public/script.js"></script>
 </body>
