--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
     <!-- script -->
      <section style="background-color: #dfdfdf;height: 400px;width: 100%;padding: 10px;"><div class="main"><div class="new"><h1>ICP.VERCEL.APP</h1></div></div></section>
      <script src="src/index.js"></script>
-     <script src="public/script.js"></script>
+     <script src="data/script.js"></script>
 </body>
 </html>
