--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <title>IC Program</title>
 </head>
 <body>
-    <nav class="nav main"><span class="title new">IC Program</span></nav>
+    <nav class="nav main"><span class="title new">IC Xpert</span></nav>
     <section class="main">
         <div class="new">
             <div id="app"></div>
         </div>
     </section>
     <!-- script -->
-     <section style="background-color: #dfdfdf;height: 400px;width: 100%;padding: 10px;"><div class="main"><div class="new"><h1>ICP.VERCEL.APP</h1></div></div></section>
+
      <script src="src/index.js"></script>
      <script src="data/script.js"></script>
 </body>
