--- a/index.html
+++ b/index.html
@@ -1,22 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <!-- Custom CSS -->
-     <link rel="stylesheet" href="src/old.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IC Program</title>
-</head>
-<body>
-    <nav class="nav main"><span class="title new">IC Xpert</span></nav>
-    <section class="main">
-        <div class="new">
-            <div id="app"></div>
-        </div>
-    </section>
-    <!-- script -->
-
-     <script src="src/index.js"></script>
-     <script src="data/script.js"></script>
-</body>
-</html>
+<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="src/old.css"><meta charset="UTF-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>IC Xpert</title></head><body><br><br><br><br><br><section class="main"><div class="new"><div id="app"></div></div></section><script src="src/index.js"></script><script src="data/script.js"></script></body></html>
