--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <link rel="stylesheet" href="src/old.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="src/old.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IC Xpert</title>
-</head>
+  </head>
 
-<body><br><br><br><br><br>
+  <body>
+    <br /><br /><br /><br /><br />
     <section class="main">
-        <div class="new">
-            <div id="app"></div>
+      <div class="new">
+        <div id="app">
         </div>
+      </div>
     </section>
     <script src="src/index.js"></script>
     <script src="data/script.js"></script>
-</body>
-
+  </body>
 </html>
