--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <b>ICX WiKi</b>
  </div>
 <div class="blockqut">
- <button class="btn" type="submit"><i class="fa-solid fa-pencil"></i></button>
+ <button class="btn" type="submit"><i class="fa-solid fa-pencil"></i>&nbsp;&nbsp;New Post</button>
 </div>
 </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
