--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
 <div class="nav flex anaround">
  <div class="blockqut">
-   <b>ICX WiKi</b>
+   <b class="h3">ICX WiKi</b>
  </div>
 <div class="blockqut">
- <button class="btn border" type="submit"><i class="fa-solid fa-pencil"></i>&nbsp;&nbsp;New Post</button>
+ <button class="btn border" type="submit"><i class="fa-solid fa-book-bookmark"></i>&nbsp;&nbsp;New Article</button>
 </div>
 </div>
 
