--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 <div class="nav flex anaround">
  <div class="blockqut">
-   <b class="h3">ICX WiKi</b>
+   <img class="logo" src="src/img/logo.png" alt="">
  </div>
 <div class="blockqut">
  <button class="btn border" type="submit"><i class="fa-solid fa-book-bookmark"></i>&nbsp;&nbsp;New Article</button>
