--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
    <img class="logo" src="src/img/logo.png" alt="">
  </div>
 <div class="blockqut">
- <button class="btn border" type="submit"><i class="fa-solid fa-book-bookmark"></i>&nbsp;&nbsp;New Article</button>
+ <button onclick="callTheopt()" class="btn border" type="submit"><i class="fa-solid fa-book-bookmark"></i>&nbsp;&nbsp;New Article</button>
 </div>
 </div>
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="/src/javascript/script.js"></script>
 </body>
 
 </html>
