--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
  <button onclick="callTheopt()" class="btn border" type="submit"><i class="fa-solid fa-book-bookmark"></i>&nbsp;&nbsp;New Article</button>
 </div>
 </div>
-
+<br /><br /><br /><br />
+<div class="">
+ <ul id="filein">
+   
+ </ul>
+</div>
+<script src="/src/javascript/script.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script src="/src/javascript/script.js"></script>
 </body>
 
 </html>
