--- a/index.html
+++ b/index.html
@@ -18,10 +18,12 @@
 </div>
 </div>
 <br /><br /><br /><br />
+<div class="flex anaround">
 <div class="">
  <ul id="filein">
    
  </ul>
+</div>
 </div>
 <script src="/src/javascript/script.js"></script>
 
