--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
  </ul>
 </div>
 </div>
+<div class="fixed vcc">
+
+</div>
 <script src="/src/javascript/script.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
-</html>
+</html>?
