--- a/index.html
+++ b/index.html
@@ -25,12 +25,16 @@
  </ul>
 </div>
 </div>
-<div class="fixed vcc">
-
+<div class="index">
+<center>
+  <h2>Mail Send</h2>
+  <hr />
+  
+</center>
 </div>
 <script src="/src/javascript/script.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </body>
 
-</html>?
+</html>
