--- a/index.html
+++ b/index.html
@@ -1,40 +1,1 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-  <link rel="stylesheet" href="/src/style/style.css" type="text/css" media="all" />
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ICX WiKi</title>
-</head>
-
-<body>
-<div class="nav flex anaround">
- <div class="blockqut">
-   <img class="logo" src="src/img/logo.png" alt="">
- </div>
-<div class="blockqut">
- <button onclick="callTheopt()" class="btn border" type="submit"><i class="fa-solid fa-book-bookmark"></i>&nbsp;&nbsp;New Article</button>
-</div>
-</div>
-<br /><br /><br /><br />
-<div class="flex anaround">
-<div class="">
- <ul id="filein">
-   
- </ul>
-</div>
-</div>
-<div class="index vcc">
-<center>
-  <h2>Mail Send</h2>
-  <hr />
-  
-</center>
-</div>
-<script src="/src/javascript/script.js"></script>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/js/all.min.js" integrity="sha512-b+nQTCdtTBIRIbraqNEwsjB6UvL3UEMkXnhzd8awtCYh0Kcsjl9uEgwVFVbhoj3uu1DO1ZMacNvLoyJJiNfcvg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</body>
-
-</html>
+Working error 🥺 
