--- a/index.html
+++ b/index.html
@@ -25,5 +25,16 @@
       tg.sendData("User clicked the button!");
     }
   </script>
+  <script>
+    
+window.showGiga()
+  .then(() => {
+    // Your reward logic here
+  })
+  .catch(e => {
+    // Handle errors here
+  });
+  </script>
+  <script src="https://ad.gigapub.tech/script?id=1541"></script>
 </body>
 </html>
