--- a/index.html
+++ b/index.html
@@ -1,17 +1,27 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>ICX Mini App</title>
-  <script src="https://telegram.org/js/telegram-web-app.js"></script>
-  <style>
-    body { background: #f5f5f5; font-family: sans-serif; text-align: center; padding: 20px; }
-    button { padding: 10px 20px; margin-top: 20px; font-size: 18px; }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Telegram Bot</title>
 </head>
+<style>
+h1{
+  margin: 0;
+  padding: 0;
+  
+}
+</style>
 <body>
   <h1>
-    This is a Telegram Bot!
+    <h1>Task</h1>
+    <hr>
+    <div>
+      Follow My X
+      <button>
+        Clim
+      </button>
+    </div>
   </h1>
 </body>
 </html>
